EMPIS2-5331: use server module, restore BeanXRoadMessage.java